src/assets/styles/main.css
@font-face {
    font-family: 'Oxygen';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url('/assets/fonts/oxygen-v10-latin-regular.woff2') format('woff2'), url('/assets/fonts/oxygen-v10-latin-regular.woff') format('woff');
}

:root {
    --space-sm: .25rem;
    --space-med: .5rem;
    --space-lg: 1rem;
    --space-xl: 2rem;
    --space-xxl: 4rem;
    --color-dark: hsl(0, 0%, 13%);
    --color-grey: hsl(0, 0%, 29%);
    --color-light-grey: hsl(0, 0%, 45%);
}

* {
    color: var(--color-dark);
    font-weight: 400;
    font-family: 'Oxygen', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    line-height: 1.25;
    margin: 0 var(--space-xl) var(--space-med) var(--space-xl);
}

p {
    line-height: 1.7em;
    margin: 0 var(--space-xl) var(--space-med) var(--space-xl);
}

img {
    display: block;
    width: 100%;
    max-width: 100%;
    height: auto;
}

section {
    margin-bottom: var(--space-lg);
}

.space-xl {
    width: 100%;
    height: var(--space-xl);
}

/* Main navigation */

#main-container {
    display: flex;
    flex-flow: column wrap;
    width: 100%;
    max-width: 730px;
    min-height: calc(100vh - 152px);
    overflow: hidden;
    padding-bottom: var(--space-xl);
    margin-left: auto;
    margin-right: auto;
}

.nav {
    width: 100%;
    /* height: 50px; */
    min-height: 50px;
    box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, .11);
    white-space: nowrap;
}

.nav-content {
    display: flex;
    justify-content: space-between;
    /* align-items: center; */
    /* flex-direction: column; */
    flex-wrap: wrap;
    /* width: 100%; */
    height: 100%;
    max-width: 730px;
    margin-left: auto;
    margin-right: auto;
    padding-left: var(--space-xl);
    padding-right: var(--space-xl);
    padding-top: var(--space-lg);
    padding-bottom: var(--space-lg);
    column-gap: 60px;
    row-gap: 10px;
}

.nav-logo {
    /* margin-left: var(--space-xl); */
    font-size: 18px;
    letter-spacing: 0px;
    font-weight: 700;
    text-decoration: none;
}

.nav-buttons {
    display: flex;
    /* flex-direction: row; */
    /* flex-direction: column; */
    flex-wrap: nowrap;
    /* justify-content: flex-end; */
    /* align-items: center; */
    column-gap: var(--space-xl);
    /* margin-right: var(--space-xl); */
    overflow-x: auto;
    scrollbar-width: none;
}

.nav-buttons::-webkit-scrollbar {
    display: none;
}

.nav-button {
    border: none;
    color: var(--color-light-grey);
    font-size: 16px;
    font-weight: 400;
    text-decoration: none;
}

.nav-button:hover {
    color: var(--color-dark);
}

@media (max-width: 480px) {
    .nav-buttons {
        column-gap: var(--space-lg);
    }

    .nav-button {
        font-size: 14px;
    }
}

/** Footer **/

#pageFooter {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    height: 75px;
    text-align: center;
}

#social {
    display: flex;
    justify-content: center;
    margin-bottom: var(--space-lg);
}

#social>a+a {
    margin-left: var(--space-xl);
}

#social img {
    height: 25px;
    width: 25px;
}

#copyright {
    margin-bottom: var(--space-lg);
    color: var(--color-grey);
}

@media only screen and (min-width: 730px) {
    #logo {
        margin-left: 0;
    }
    #main-container {
        width: 70%;
    }
}

@media only screen and (min-width: 920px) {
    #social>a+a {
        margin-left: var(--space-xxl);
    }
}

